--- a/.github/workflows/build-ubuntu-6t.yml
+++ b/.github/workflows/build-ubuntu-6t.yml
@@ -1,36 +1,36 @@
-name: Build OnePlus 6T Boot + Rootfs
+# .github/workflows/build-ubuntu-6t.yml
+name: Build OnePlus 6T Boot + Rootfs
 
 on:
-  workflow_dispatch:      # 允许手动触发
+  workflow_dispatch:          # 允许手动触发
   push:
-    branches:
-      - main               # 你自己的分支
+    branches: [ main ]        # 也可以按需改成你的主分支
 
 jobs:
   build:
     runs-on: ubuntu-22.04
     env:
-      # ----------------- 资源地址 -----------------
-      KERNEL_REPO: https://gitlab.com/sdm845-mainline/linux.git
+      # ---------- 资源地址 ----------
+      KERNEL_REPO:   https://gitlab.com/sdm845-mainline/linux.git
       KERNEL_BRANCH: sdm845-6.16-845
-      CONFIG_URL: https://cloud.athbe.cn/f/D3Uq/sdm845.config
-      CHECK_SCRIPT: https://cloud.athbe.cn/f/2MTG/check.sh
-      DTB_URL: https://cloud.athbe.cn/f/WEhm/OnePlus6T.dtb
-      UBUNTU_BASE: https://cdimage.ubuntu.com/ubuntu-base/releases/25.04/release/ubuntu-base-25.04-base-arm64.tar.gz
-      FIRMWARE_URL: https://cloud.athbe.cn/f/6nSr/firmware.tar.gz
-      TTY_SCRIPT: https://cloud.athbe.cn/f/7BHR/ttygs0-console.sh
-      BOOTMAC_REPO: https://gitlab.postmarketos.org/postmarketOS/bootmac.git
-      # ----------------- 输出文件 ------------------
+      CONFIG_URL:    https://cloud.athbe.cn/f/D3Uq/sdm845.config
+      CHECK_SCRIPT:  https://cloud.athbe.cn/f/2MTG/check.sh
+      DTB_URL:       https://cloud.athbe.cn/f/WEhm/OnePlus6T.dtb
+      UBUNTU_BASE:   https://cdimage.ubuntu.com/ubuntu-base/releases/25.04/release/ubuntu-base-25.04-base-arm64.tar.gz
+      FIRMWARE_URL:  https://cloud.athbe.cn/f/6nSr/firmware.tar.gz
+      TTY_SCRIPT:    https://cloud.athbe.cn/f/7BHR/ttygs0-console.sh
+      BOOTMAC_REPO:  https://gitlab.postmarketos.org/postmarketOS/bootmac.git
+      # ---------- 输出文件 ----------
       ROOTFS_IMG: rootfs.img
-      BOOT_IMG: boot.img
-      # ----------------- 缓存键 --------------------
+      BOOT_IMG:   boot.img
+      # ---------- 缓存键 ----------
       CACHE_KEY: ${{ runner.os }}-bootimage-${{ github.sha }}
 
     steps:
+      # -------------- 基础工具安装 --------------
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # ----------------- 基础工具安装 ----------------
       - name: Install build dependencies
         run: |
           sudo apt-get update -y
@@ -42,7 +42,7 @@ jobs:
             mkbootimg ca-certificates dialog locales nano apt-utils \
             initramfs-tools cpio busybox-initramfs
 
-      # ----------------- 缓存/克隆内核 ----------------
+      # -------------- 缓存/克隆内核 --------------
       - name: Cache kernel source
         uses: actions/cache@v4
         with:
@@ -56,7 +56,7 @@ jobs:
           git clone --depth 1 --branch ${{ env.KERNEL_BRANCH }} \
             ${{ env.KERNEL_REPO }} linux-sdm845-6.16-845
 
-      # ----------------- 准备内核配置 ----------------
+      # -------------- 准备内核配置 --------------
       - name: Prepare kernel config
         run: |
           wget -O sdm845.config ${{ env.CONFIG_URL }}
@@ -72,13 +72,13 @@ jobs:
           sed -i 's/# CONFIG_USB_SERIAL_TEGRA is not set/CONFIG_USB_SERIAL_TEGRA=y/' \
             linux-sdm845-6.16-845/.config
 
-      # ----------------- 编译内核 ----------------
+      # -------------- 编译内核 --------------
       - name: Build kernel
         run: |
           make -C linux-sdm845-6.16-845 O=out ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- defconfig
           make -C linux-sdm845-6.16-845 O=out ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- -j$(nproc) Image dtbs
 
-      # ----------------- 构建 initrd ----------------
+      # -------------- 构建 initrd --------------
       - name: Build initrd
         run: |
           cd linux-sdm845-6.16-845
@@ -90,14 +90,14 @@ jobs:
             DTBS=out/arch/arm64/boot/dts/mediatek \
             TUNE=0
 
-      # ----------------- 生成 boot.img ----------------
+      # -------------- 生成 boot.img --------------
       - name: Build boot.img
         run: |
           cd linux-sdm845-6.16-845
           cat initrd.img > ../${{ env.BOOT_IMG }}
           echo 'config.txt' >> ../${{ env.BOOT_IMG }}
 
-      # ----------------- 制作 rootfs ----------------
+      # -------------- 制作 rootfs --------------
       - name: Cache Ubuntu‑Base
         uses: actions/cache@v4
         with:
@@ -149,7 +149,7 @@ jobs:
           sudo rsync -a linux-sdm845-6.16-845/out/arch/arm64/boot/lib/modules/ mount-root/lib/modules
           sudo rsync -a linux-sdm845-6.16-845/out/arch/arm64/boot/dts/mediatek/* mount-root/firmware/dtbs
 
-      # ----------------- 安装 tty console service ----------------
+      # -------------- 安装 tty console service --------------
       - name: Install tty console service
         run: |
           wget -O ttygs0-console.sh ${{ env.TTY_SCRIPT }}
@@ -172,8 +172,8 @@ jobs:
           WantedBy=multi-user.target
           EOF
 
-      # ----------------- 安装 shutdown‑modem service ----------------
-      - name: Install shutdown-modem service
+      # -------------- 安装 shutdown‑modem service --------------
+      - name: Install shutdown‑modem service
         run: |
           sudo tee mount-root/etc/systemd/system/shutdown-modem.service >/dev/null <<'EOF'
           [Unit]
@@ -187,14 +187,14 @@ jobs:
           WantedBy=shutdown.target
           EOF
 
-      # ----------------- 安装 bootmac 工具 ----------------
+      # -------------- 安装 bootmac 工具 --------------
       - name: Install bootmac
         run: |
           git clone --depth 1 ${{ env.BOOTMAC_REPO }} bootmac
           cd bootmac
           make -f Makefile
 
-      # ----------------- 卸载并清理 ----------------
+      # -------------- 卸载并清理 --------------
       - name: Unmount rootfs
         run: |
           sudo umount mount-root/dev
@@ -203,7 +203,7 @@ jobs:
           sudo umount mount-root
           sudo rmdir mount-root
 
-      # ----------------- 转成 sparse rootfs 并上传 ----------------
+      # -------------- 转成 sparse rootfs 并上传 --------------
       - name: Convert rootfs to sparse image
         run: |
           sudo e2fsck -f -y ${{ env.ROOTFS_IMG }}
@@ -213,7 +213,7 @@ jobs:
           sudo truncate -s 0 sparse-${{ env.ROOTFS_IMG }}
           sudo dd if=${{ env.ROOTFS_IMG }} of=sparse-${{ env.ROOTFS_IMG }} conv=sparse
 
-      # ----------------- 上传产物 ----------------
+      # -------------- 上传产物 --------------
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
