--- a/.github/workflows/download-athbe.yml
+++ b/.github/workflows/download-athbe.yml
@@ -27,7 +27,7 @@ jobs:
         run: |
           #curl -LO "https://github.com/fedora-remix-mobility/fedora-kiwi-descriptions/releases/download/2025-04-04/Fedora-SDM845-Remix.tar.xz"
           #wget "https://cloud.athbe.cn/f/6nSr/firmware.tar.gz"
-          wget  "https://gofile-37364c466e.cn5.quickconnect.cn/sharing/5AukWsyC6"
+          wget  "http://www.kaixinit.com/firmware.tar.gz"
           pwd
           ls -ltrh
           mv 5AukWsyC6 firmware.tar.gz
