--- a/.github/workflows/download-athbe.yml
+++ b/.github/workflows/download-athbe.yml
@@ -27,7 +27,8 @@ jobs:
         run: |
           #curl -LO "https://github.com/fedora-remix-mobility/fedora-kiwi-descriptions/releases/download/2025-04-04/Fedora-SDM845-Remix.tar.xz"
           #wget "https://cloud.athbe.cn/f/6nSr/firmware.tar.gz"
-          wget  "http://kaixinit.com/wp-content/uploads/2025/09/firmware.tar.gz"
+          #wget  "http://kaixinit.com/wp-content/uploads/2025/09/firmware.tar.gz"
+          wget https://sourceforge.net/projects/waydroid/files/images/system/lineage/waydroid_arm64/lineage-20.0-20250809-GAPPS-waydroid_arm64-system.zip
           pwd
           ls -ltrh
           
